--- a/cfg/autoexec.cfg
+++ b/cfg/autoexec.cfg
@@ -8,20 +8,20 @@ fc_hl2_weapon_criticals 0
 fc_hl2_weapon_criticals_melee 0
 tf_weapon_criticals 0
 tf_weapon_criticals_melee 0
+fc_use_hl2_player_hull 0
 
 fc_classlimit_john -1
 fc_classlimit_antlion 0
 fc_classlimit_civilian 0
 fc_classlimit_combine 0
-fc_classlimit_demoman 0
+fc_classlimit_demoman -1
 fc_classlimit_enforcer 0
-fc_classlimit_engineer 0
-fc_classlimit_heavy 0
+fc_classlimit_engineer -1
+fc_classlimit_heavy -1
 fc_classlimit_medic 0
 fc_classlimit_mercenary 0
 fc_classlimit_pyro 0
 fc_classlimit_saxton 0
 fc_classlimit_scout 0
-fc_classlimit_sniper 0
-fc_classlimit_soldier 0
-fc_classlimit_spy 0
+fc_classlimit_sniper -1
+fc_classlimit_soldier -1
